--- a/AboutUs.html
+++ b/AboutUs.html
@@ -56,14 +56,14 @@
     </div>
     <div class="column">
         <div class="card">
-          <div class="container"style="background-color: orange;padding: 20px;box-shadow: 2px 2px 20px 23px #f0cb81; ">
+<!--           <div class="container"style="background-color: orange;padding: 20px;box-shadow: 2px 2px 20px 23px #f0cb81; ">
             <h2>S.NAGI REDDY</h2>
             <p class="title">Front-end, python, java and C++ developer.</p>
             <p>Good in problem solving, technical and programming skills.</p>
             <p>seelam.nanireddy11@gmail.com</p>
             <p>khammam, telangana,India,507203</p>
 
-          </div>
+          </div> -->
         </div>
       </div>
     
