--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
   width: 300px;
   height: 100px;
   background: white;
+  font-family: sans-serif
+
 }
 
 .header h1 {
   position: relative;
   top: 18px;
   left: 10px;
+  font-family: sans-serif
 }
         div{
             font-family: cursive, sans-serif;
       background-color: #52b91bba;
       color: white;
       padding: 10px;
+      font-family: sans-serif
       /* border-radius: 10px; */
       /* box-shadow: 2px 2px 10px 23px #7fecad; */
         }
@@ -38,6 +42,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: sans-serif
     /* padding: 10px; */
     /* flex: right; */
     
@@ -61,6 +66,15 @@
         background-color: #333;
         color: #fff;
       }
+      .images{
+        background-color: #F0F0F0;
+      padding: 20px;
+      border: 1px solid #CCC;
+      border-radius: 4px;
+      text-align: center;
+      font-size: 18px;
+      color: #333;
+      }
     </style>
 </head>
 <body>
@@ -78,8 +92,10 @@
         <li class="list-items"><a href="product.html">Products</a></li>
         <li class="list-items"><a href="diseases.html">Diseases</a></li>
     </div>
-    <img width="720px"height="400px";flex='left' src="background.jpg">
-    <img width="720px"height="400px";flex='right'  src="background 3.jpeg">
+    <div class="images">
+    <img src="background.jpg">
+    
+</div>
     <!-- <h3 style="color: #e75931;" >CLICK  FOR FARMERS PORTAL  </h3>
         <a href="https://farmer.gov.in/"> FARMERS PORTAL</a> -->
 
