--- a/product.html
+++ b/product.html
@@ -11,18 +11,21 @@
   width: 300px;
   height: 100px;
   background: #555;
+  font-family: sans-serif
 }
 
 .header h1 {
   position: relative;
   top: 18px;
   left: 10px;
+  font-family: sans-serif
 }
         div{
-            font-family: cursive, sans-serif;
+            font-family: sans-serif;
       background-color: #52b91bba;
       color: white;
       padding: 10px;
+
 
       text-align: center;
         }
