--- a/AboutUs.html
+++ b/AboutUs.html
@@ -8,7 +8,7 @@
     <title>FARMERS HELP CENTER</title>
     <style>
         div{
-            font-family: cursive, sans-serif;
+          font-family: sans-serif;
       background-color: #52b91bba;
       color: white;
       padding: 10px;
@@ -56,14 +56,14 @@
     </div>
     <div class="column">
         <div class="card">
-<!--           <div class="container"style="background-color: orange;padding: 20px;box-shadow: 2px 2px 20px 23px #f0cb81; ">
+          <div class="container"style="background-color: orange;padding: 20px;box-shadow: 2px 2px 20px 23px #f0cb81; ">
             <h2>S.NAGI REDDY</h2>
             <p class="title">Front-end, python, java and C++ developer.</p>
             <p>Good in problem solving, technical and programming skills.</p>
             <p>seelam.nanireddy11@gmail.com</p>
             <p>khammam, telangana,India,507203</p>
 
-          </div> -->
+          </div>
         </div>
       </div>
     
