--- a/ContactUs.html
+++ b/ContactUs.html
@@ -12,6 +12,7 @@
       background-color: #52b91bba;
       color: white;
       padding: 10px;
+      font-family: sans-serif
 
         }
         .content {
