--- a/buyerseller.html
+++ b/buyerseller.html
@@ -8,7 +8,7 @@
     <title>FARMERS HELP CENTER</title>
     <style>
         div{
-            font-family: cursive, sans-serif;
+          font-family: sans-serif;
       background-color: #52b91bba;
       color: white;
       padding: 10px;
