--- a/diseases.html
+++ b/diseases.html
@@ -7,18 +7,7 @@
     <title>DISEASES</title>
 </head>
 <style>
-    /* .header img {
-float:right;
-width: 300px;
-height: 100px;
-background: #555;
-} */
 
-/* .header h1 {
-position: relative;
-top: 18px;
-left: 10px;
-} */
     div{
         font-family: cursive, sans-serif;
   background-color: #52b91bba;
@@ -26,6 +15,7 @@ left: 10px;
   padding: 10px;
 
   text-align: center;
+  font-family: sans-serif
     }
     /* .div1{
         font-family: 'Courier New', Courier, monospace;
@@ -64,10 +54,7 @@ align-items: center;
 </style>
 </head>
 <body>
-<!-- <div class="header"><marquee ></marquee>
-    <img src="logo.gif" alt="logo";  />
-    <h1 style="text-align: center;color: #f6f5f5;">E-KISAN</h1>
-  </div> -->
+
 
 
 <div class="content" style="text-align: center;">
